# varwg

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  PKG-INFO  README.md  README.rst  distribute_setup.py  dockerfile.sim  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-wheels.yml  ci.yml  generate-readme-plots.yml  release.yml  test-build.yml
doc/: conf.py  index.rst
docs/: CITATION_SECTION.md
docs/plans/: 2025-10-15-bundle-dwd-test-data.md  2025-10-16-optimize-slow-tests.md  2025-10-17-pypi-multiplatform-release.md  2025-10-20-complete-varwg-renaming.md  2025-10-20-rename-classes.md
scripts/: gen_sample_met.py
src/varwg/: __init__.py  ctimes.pyx  helpers.py  sample.met
src/varwg/core/: __init__.py  base.py  core.py  plotting.py  vg_core.py
src/varwg/core/tests/: conftest.py  gen_test_data.py  test_core.py  test_vg.py
src/varwg/meteo/: meteox2y_cy.pyx
src/varwg/test_data/: README.md  air_temperature_tutorial_subset.nc  freiburg_precipitation_daily_2000_2016.nc  konstanz_temperature_daily_2000_2016.nc  stoetten_precipitation_daily_1990_2020.nc
src/varwg/tests/: conftest.py  test_readme.py
src/varwg/time_series_analysis/: cresample.pyx  distributions.py  models.py  seasonal_distributions.py
src/varwg/time_series_analysis/tests/: arbeitslose_baugewerbe.txt
src/vg/: __init__.py  config_template.py  helpers.py  smoothing.py  times.py
src/vg/core/: __init__.py  monty.py  vg_base.py  vg_core.py  vg_plotting.py
src/vg/core/tests/: gen_test_data.py  test_vg.py
src/vg/meteo/: __init__.py  avrwind.py  dwd_opendata.py  meteox2y.py  meteox2y_cy.pyx
src/vg/test_data/: download_fixtures.py  konstanz_sun_daily_2000_2016.nc
src/vg/tests/: conftest.py  test_brunner.py  test_meteox2y.py  test_meteoxy_cy.py  test_smoothing.py
src/vg/time_series_analysis/: _kde.py  conditional_sim.py  distributions.py  models.py  rain_stats.py  resample.py  seasonal.py  seasonal_distributions.py  seasonal_kde.py  spectral.py  time_series.py
src/vg/time_series_analysis/tests/: test_conditional_sim.py  test_cresample.py  test_distributions.py  test_rain_stats.py  test_resample.py  test_seasonal_distributions.py  test_seasonal_kde.py  test_time_series.py
vg/: __init__.py  config_template.py  helpers.py  smoothing.py  times.py
vg/core/: __init__.py  monty.py  vg_base.py  vg_core.py  vg_plotting.py
vg/core/tests/: gen_test_data.py  test_monty.py  test_vg.py
vg/meteo/: __init__.py  avrwind.py  meteox2y.py  meteox2y_cy.pyx  windrose.py
vg/tests/: test_smoothing.py
vg/time_series_analysis/: _kde.py  conditional_sim.py  cresample.pyx  distributions.py  models.py  optimize.py  phase_randomization.py  rain_stats.py  resample.py  seasonal.py  seasonal_distributions.py  seasonal_kde.py  spectral.py  time_series.py
vg/time_series_analysis/tests/: test_conditional_sim.py  test_cresample.py  test_distributions.py  test_kde.py  test_models.py  test_rain_stats.py  test_resample.py  test_seasonal_kde.py  test_spectral.py  test_time_series.py
(+1 files in other folders)
