[tool.black]
line-length = 79

[project]
name = "vg"
version = "1.3.0"
description = "A Vector Autoregressive Weather Generator"
readme = "README.md"
authors = [
    { name = "iskur", email = "dirk.schlabing@posteo.de" }
    # {name = "Dirk Schlabing",email = "dirk.schlabing@iws.uni-stuttgart.de"}
]
license = {text = "BSD"}
requires-python = ">=3.13"
dependencies = [
    "bottleneck>=1.5.0",
    "dill>=0.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "timezonefinder>=6.5.9",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["setuptools>=61", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "cython>=3.1.1",
  "docutils>=0.21.2",
  "ipython>=9.3.0",
  "numpydoc>=1.8.0",
  "pytest>=8.4.0",
  "restructuredtext-lint>=1.4.0",
]

[tool.pytest.ini_options]
addopts = "--pdb"
